[package]
name = "memx"
version = "0.1.17"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "memory functions like libc memcmp(), memchr(), memmem(), memcpy(), memset()"
keywords = ["memcmp", "memchr", "memmem"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/memx"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
rustversion = "1.0"

[build-dependencies]
rustc_version = "0.4"

[workspace]
members = [
    "xtask",
    "xbench",
]
