[package]
name = "memx"
version = "0.1.25"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "memory functions like libc memcmp(), memchr(), memmem(), memcpy(), memset()"
keywords = ["memcmp", "memchr", "memmem"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/memx"

[features]
default = []

[dependencies]

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
rustversion = "1.0"

[build-dependencies]
rustc_version = "0.4"

[workspace]
members = [
    "xtask",
    "xbench",
]

[profile.release]
lto = true
