[package]
name = "memx"
version = "0.1.32"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "memory functions like libc memcmp(), memchr(), memmem(), memcpy(), memset()"
keywords = ["memcmp", "memchr", "memmem"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/memx"

[features]
default = []

# for test and tarpaulin
test = []

test_pointer_width = ["test"]
test_pointer_width_64 = ["test_pointer_width"]
test_pointer_width_32 = ["test_pointer_width"]

test_alignment_check = ["test"]

[dependencies]

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
rustversion = "1.0"
cfg-iif = "0.2"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
x86-alignment-check = "0.1"

[build-dependencies]

[workspace]
members = [
    "xtask",
    "xbench",
]

[profile.release]
lto = true

[profile.bench]
opt-level = 3
codegen-units = 1
lto = true
#lto = false
#lto = "thin"
