[package]
name = "xbench"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"

[dependencies]

[dev-dependencies]
memx = { path=".." }
criterion = "0.5"
memchr = "2.5"
clf = "0.1"

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[[bench]]
name = "bench-memchr"
path = "benches/bench-memchr.rs"
harness = false

[[bench]]
name = "bench-memrchr"
path = "benches/bench-memrchr.rs"
harness = false

[[bench]]
name = "bench-memnechr"
path = "benches/bench-memnechr.rs"
harness = false

[[bench]]
name = "bench-memrnechr"
path = "benches/bench-memrnechr.rs"
harness = false

[[bench]]
name = "bench-memcmp"
path = "benches/bench-memcmp.rs"
harness = false

[[bench]]
name = "bench-memeq"
path = "benches/bench-memeq.rs"
harness = false

[[bench]]
name = "bench-memcpy"
path = "benches/bench-memcpy.rs"
harness = false

[[bench]]
name = "bench-memset"
path = "benches/bench-memset.rs"
harness = false


[[bench]]
name = "bench-memmem"
path = "benches/bench-memmem.rs"
harness = false

[[bench]]
name = "bench-memrmem"
path = "benches/bench-memrmem.rs"
harness = false

[[bench]]
name = "bench-memchr_dbl"
path = "benches/bench-memchr_dbl.rs"
harness = false

[[bench]]
name = "bench-memrchr_dbl"
path = "benches/bench-memrchr_dbl.rs"
harness = false

[[bench]]
name = "bench-memchr_tpl"
path = "benches/bench-memchr_tpl.rs"
harness = false

[[bench]]
name = "bench-memrchr_tpl"
path = "benches/bench-memrchr_tpl.rs"
harness = false

[[bench]]
name = "bench-memchr_qpl"
path = "benches/bench-memchr_qpl.rs"
harness = false

[[bench]]
name = "bench-memrchr_qpl"
path = "benches/bench-memrchr_qpl.rs"
harness = false

[[bench]]
name = "bench-memnechr_dbl"
path = "benches/bench-memnechr_dbl.rs"
harness = false

[[bench]]
name = "bench-memrnechr_dbl"
path = "benches/bench-memrnechr_dbl.rs"
harness = false

[[bench]]
name = "bench-memnechr_tpl"
path = "benches/bench-memnechr_tpl.rs"
harness = false

[[bench]]
name = "bench-memrnechr_tpl"
path = "benches/bench-memrnechr_tpl.rs"
harness = false

[[bench]]
name = "bench-memnechr_qpl"
path = "benches/bench-memnechr_qpl.rs"
harness = false

[[bench]]
name = "bench-memrnechr_qpl"
path = "benches/bench-memrnechr_qpl.rs"
harness = false
